--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Incidental Learning Protocol's homepage
+description: Protocol for running Sensory Preconditioning experiments!
